fixed background flicker issue

--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .background {
   background: fixed;
   /* background-image: url("../../images/mist.jpg"); */
-  background-position: center;
+  background-position: top;
   background-size: cover;
 
   width: 100%;
